fix: remove gap from nav list

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -36,7 +36,6 @@ nav ul {
   display: flex;
   justify-content: space-between;
   list-style-type: none;
-  gap: 3rem;
   padding: 0;
 }
 
